test_suite/tests/ui/fail/invalid_parent/inexistent_parent.rs
use clapi::macros::*;

#[command]
fn files(){
    #[subcommand]
    fn list(){}

    #[subcommand(parent="list2")]
    fn sort(){}
}

fn main(){}